Fix text truncation

--- a/war/src/main/less/form/file-upload.less
+++ b/war/src/main/less/form/file-upload.less
@@ -1,5 +1,6 @@
 .jenkins-file-upload {
   position: relative;
+  width: 100%;
   margin: -10px 0 0 -10px;
   padding: 10px 0 10px 10px;
   outline: none;
